test/compile_fail/continuation_discontinue_removed.zig
const shift = @import("shift");

const tag = struct {};
const NoError = error{};

comptime {
    _ = shift.Continuation(void, tag, void, NoError).discontinue;
}
